--- a/core/dbio/templates/clickhouse.yaml
+++ b/core/dbio/templates/clickhouse.yaml
@@ -4,7 +4,7 @@ core:
   drop_index: "select 'indexes not implemented for clickhouse'"
   create_index: "select 'indexes not implemented for clickhouse'"
   create_schema: create database {schema}
-  create_table: create table {table} ({col_types}) engine=MergeTree {primary_key} {partition_by} ORDER BY {order_by}
+  create_table: create table if not exists {table} ({col_types}) engine=MergeTree {primary_key} {partition_by} ORDER BY {order_by}
   rename_table: ALTER TABLE {table} RENAME TO {new_table}
   alter_columns: alter table {table} modify column {col_ddl}
   modify_column: '{column} {type}'
