--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1258,3 +1258,13 @@
     - '✓ Test 6 PASSED: Special characters properly handled in JSON payload'
     - '✓ Test 7 PASSED: Edge cases handled correctly'
     - 'All tests completed successfully!'
+
+- id: 144
+  name: Test Directory run
+  run: |
+    sling run cmd/sling/tests/replications/many/nested/p.command.yaml
+    sling run --directory cmd/sling/tests/replications/many/nested
+    sling run cmd/sling/tests/replications/many/
+  output_contains:
+    - 'p.log.yaml (pipeline)'
+    - 'r.swapi.yaml (replication)'
