fix(json): update ColumnMap after adding columns to reflect current state

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1193,10 +1193,8 @@
 - id: 137
   name: Test nested JSON to SQLite with replication config (pre-defined columns)
   run: 'sling run -d -r cmd/sling/tests/replications/r.71.json_sqlite_nested.yaml'
-  err: true
   group: sqlite
-  output_contains:
-   - cannot be assigned to zero-based row
+  rows: 4
 
 - id: 138
   name: Test wildcard stream with disabled table exclusion
