Add ADBC PostgreSQL and SQL Server tests, implement ADBC connection handling
- Created new test files for ADBC PostgreSQL and SQL Server connections, including YAML configurations for testing.
- Updated the test suite to include tests for ADBC PostgreSQL and SQL Server connections, verifying successful execution and expected output.
- Modified connection handling in `connection.go` to support ADBC connections with a simplified URL scheme.
- Enhanced database connection logic in `database.go` to recognize ADBC connections and route them to the appropriate connection type.
- Implemented the `ArrowDBConn` type in `database_arrow_dbc.go` to manage ADBC connections, including methods for initialization, connection, and schema retrieval.
- Updated type definitions in `dbio_types.go` to include ADBC as a valid database type.
- Added a generic ADBC template in `adbc.yaml` for SQL operations and metadata queries.
- Updated `go.mod` and `go.sum` to include the Apache Arrow ADBC library as a dependency.

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1277,3 +1277,27 @@
     - 'Stream 2: total_rows=5, status=success'
     - 'Stream 3: total_rows=5, status=success'
     - 'Stream 4: total_rows=5, status=success'
+
+# Requires ADBC_POSTGRES connection with PostgreSQL ADBC driver installed
+# Install driver: dbc install postgresql
+- id: 146
+  name: Test ADBC PostgreSQL connection
+  run: sling run -r cmd/sling/tests/replications/r.77.adbc_postgres.yaml -d
+  output_contains:
+    - 'Testing ADBC PostgreSQL connection'
+    - 'Read CSV data:'
+    - '1,test'
+    - 'ADBC test completed successfully'
+    - 'wrote 1 rows'
+
+# Requires ADBC_SQLSERVER connection with SQL Server ADBC driver installed
+# Install driver: dbc install mssql
+- id: 147
+  name: Test ADBC SQL Server connection
+  run: sling run -r cmd/sling/tests/replications/r.78.adbc_sqlserver.yaml -d
+  output_contains:
+    - 'Testing ADBC SQL Server connection'
+    - 'Read CSV data:'
+    - '1,test'
+    - 'ADBC SQL Server test completed successfully'
+    - 'wrote 1 rows'
