--- a/core/dbio/templates/postgres.yaml
+++ b/core/dbio/templates/postgres.yaml
@@ -2,6 +2,7 @@ core:
   drop_table: drop table if exists {table}
   drop_view: drop view if exists {view}
   drop_index: drop index if exists {schema}.{index}
+  create_schema: create schema if not exists {schema}
   create_table: create table if not exists {table} ({col_types}) {partition_by}
   create_index: create index if not exists {index} on {table} ({cols})
   create_unique_index: create unique index if not exists {index} on {table} ({cols})
