--- a/core/dbio/templates/sqlserver.yaml
+++ b/core/dbio/templates/sqlserver.yaml
@@ -80,7 +80,7 @@ metadata:
       numeric_precision as precision, 
       numeric_scale as scale,
       collation_name,
-      collationProperty(collation_name, 'CodePage') as collation_code
+      cast(collationProperty(collation_name, 'CodePage') as varchar) as collation_code
     from INFORMATION_SCHEMA.COLUMNS
     where table_schema = '{schema}'
       and table_name = '{table}'
@@ -168,7 +168,7 @@ metadata:
       cols.data_type as data_type,
       cols.ordinal_position as position,
       cols.collation_name,
-      collationProperty(collation_name, 'CodePage') as collation_code
+      cast(collationProperty(collation_name, 'CodePage') as varchar) as collation_code
     from INFORMATION_SCHEMA.COLUMNS cols
     join tables
       on tables.table_catalog = cols.table_catalog
